fixed chat overflow issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -672,6 +672,7 @@ form .clearfix {
   width: 446px;
   margin: 4px 6px;
   overflow: auto;
+  word-wrap: break-word;
 }
 .bordered {
   border: 1px solid #ccc;
